--- a/public/about.html
+++ b/public/about.html
@@ -2,6 +2,12 @@
 <body>
 Grade information is taken from <a href=http://registrar.tamu.edu/facultystaff/report/default.aspx>http://registrar.tamu.edu/facultystaff/report/default.aspx</a>
 <br>
+Only engineering courses can be searched for now
+<br>
+DB contains info from 2009 fall to 2014 summer
+<br>
+Didn't add info before 2009 fall as the pdf's format is different
+<br>
 <br>
 Code is available at <a href=https://github.com/chaitu236/gradesearch>https://github.com/chaitu236/gradesearch</a>
 <br>
