--- a/public/about.html
+++ b/public/about.html
@@ -4,7 +4,7 @@ Grade information is taken from <a href=http://registrar.tamu.edu/facultystaff/r
 <br>
 Only engineering courses can be searched for now
 <br>
-DB contains info from 2009 fall to 2014 summer
+DB contains info from 2009 fall to 2014 fall
 <br>
 Didn't add info before 2009 fall as the pdf's format is different
 <br>
