--- a/public/about.html
+++ b/public/about.html
@@ -2,7 +2,7 @@
 <body>
 Grade information is taken from <a href=http://registrar.tamu.edu/facultystaff/report/default.aspx>http://registrar.tamu.edu/facultystaff/report/default.aspx</a>
 <br>
-Only engineering courses can be searched for now
+Only courses from Business Administration, Engineering, Science can be searched for now
 <br>
 DB contains info from 2009 fall to 2014 fall
 <br>
