fix precompile to run in prod mode, req for hosting

--- a/public/about.html
+++ b/public/about.html
@@ -2,9 +2,7 @@
 <body>
 Grade information is taken from <a href=http://registrar.tamu.edu/facultystaff/report/default.aspx>http://registrar.tamu.edu/facultystaff/report/default.aspx</a>
 <br>
-Only courses from Business Administration, Engineering, Science can be searched for now
-<br>
-(talk to me if you'd like some course to be added)
+Only courses from Business Administration, Engineering, Science can be searched for now (talk to me if you'd like some course to be added)
 <br>
 DB contains info from 2009 fall to 2015 spring
 <br>
@@ -16,7 +14,13 @@ Code is available at <a href=https://github.com/chaitu236/gradesearch>https://gi
 DB is also available if you want to do advanced queries on the data
 <br>
 <br>
-There is no warranty of any kind for this app. If it kills your cat, don't blame me
+There is no guarantee of any kind for this app.
+If it kills your cat, don't blame me
+<br>
+<br>
+<b>
+My free trial for amazon hosting is ending in september. If you'd like to host this application for the next 1 year (won't cost you anything), please get in touch.
+</b>
 <br>
 <br>
 Developed by Chaitanya Vadrevu
