Add info about 2015 fall update

--- a/public/about.html
+++ b/public/about.html
@@ -4,7 +4,7 @@ Grade information is taken from <a href=http://registrar.tamu.edu/facultystaff/r
 <br>
 Only courses from Business Administration, Engineering, Science can be searched for now (talk to me if you'd like some course to be added)
 <br>
-DB contains info from 2009 fall to 2015 spring
+DB contains info from 2009 fall to 2015 fall
 <br>
 Didn't add info before 2009 fall as the pdf's format is different
 <br>
