Added architecture courses

--- a/public/about.html
+++ b/public/about.html
@@ -2,7 +2,7 @@
 <body>
 Grade information is taken from <a href=http://registrar.tamu.edu/facultystaff/report/default.aspx>http://registrar.tamu.edu/facultystaff/report/default.aspx</a>
 <br>
-Only courses from Business Administration, Engineering, Science can be searched for now (talk to me if you'd like some course to be added)
+Only courses from Business Administration, Engineering, Science, Architecture can be searched for now (talk to me if you'd like some course to be added)
 <br>
 DB contains info from 2009 fall to 2015 fall
 <br>
