--- a/public/about.html
+++ b/public/about.html
@@ -1,10 +1,10 @@
 <html>
 <body>
-Grade information is taken from <a href=http://registrar.tamu.edu/facultystaff/report/default.aspx>http://registrar.tamu.edu/facultystaff/report/default.aspx</a>
+Grade information is taken from <a href=http://web-as.tamu.edu/gradereport/>http://web-as.tamu.edu/gradereport/</a>
 <br>
 Only courses from Business Administration, Engineering, Science, Architecture can be searched for now (talk to me if you'd like some course to be added)
 <br>
-DB contains info from 2009 fall to 2015 fall
+DB contains info from 2009 fall to 2016 spring
 <br>
 Didn't add info before 2009 fall as the pdf's format is different
 <br>
